fixed text overlap on GS5 and IP5 views

--- a/styles/day.scss
+++ b/styles/day.scss
@@ -293,5 +293,9 @@
         top: 60%;
       }
     }
+
+    .footer {
+      margin: 60px auto 0 auto;
+    }
   }
 }
