--- a/styles/night.scss
+++ b/styles/night.scss
@@ -264,3 +264,12 @@
     }
   }
 }
+
+@media (max-height: 650px) and (max-width: 380px) {
+  .site-night {
+
+    .footer {
+      margin: 50px auto 0 auto;
+    }
+  }
+}
